2010-02-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remove netCDF offset/scalefactor if option -b 32 is set
	
2010-01-28  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Ensstat: don't overwrite existing files

2010-01-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Zonstat: added support for generic grids
	* Merstat: added support for generic grids

2010-01-14  Frank Kaspar <Frank.Kaspar@dwd.de>

	* import_cmsaf: added more corrections for wrong projection parameter

2010-01-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* replace: added support for time constant fields [request: Wei Wei]
	
2010-01-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Genweights: use netCDF2 (64bit) for large remap weights files [request: Daniel Goll]
	
2010-01-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added module Fourier
	* Detrend: OpenMP parallelization

2009-12-23  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapcon, remaplaf: speed up by fast store of links

2009-12-15  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Version 1.4.1 released

2009-12-14  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Vertint: set default table number to 0
	
2009-12-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Ensstat: change vlistCompare to func_sftn
	
2009-11-30  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* merge, mergetime: don't overwrite existing files
	
2009-11-27  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: splittabnum - Split parameter table numbers

2009-11-19  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* showtime: removed output of date, only print time string hh:mm:ss
	* convert date and time to string for printing

2009-11-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: sethalo - Set the left and right bounds of a field
	* change number of input streams from unlimited to 1 in pipes
	* rename module Select to Selvar
	* rename selgridname/selzaxisname to selgrid/selzaxis
	* added operator vct2